--- a/styles.css
+++ b/styles.css
@@ -82,24 +82,29 @@ button:hover {
 }
 
 nav {
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-li {
+  /* display: flex;
+  justify-content: center; */
   background-color: #109090;
 }
 
 .breadcrumbs {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   list-style: none;
   background-color: #109090;
+  padding: 0;
 }
 
 i {
-  color: black;
+  color: white;
   background-color: #109090;
   font-size: 75px;
   padding: 15px;
+}
+
+i:active {
+  background-color: #1a5e5e;
 }
 
 .icon-link {
