update bug fixed navi

--- a/styles.css
+++ b/styles.css
@@ -82,8 +82,9 @@ button:hover {
 }
 
 nav {
-  /* display: flex;
-  justify-content: center; */
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   background-color: #109090;
 }
 
@@ -100,7 +101,7 @@ nav {
 i {
   color: white;
   background-color: #109090;
-  font-size: 75px;
+  font-size: 60px;
   padding: 15px;
 }
 
