--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,26 @@ h1 {
   color: white;
 }
 
-.questionCard {
+.containerQuestionCards li {
+  list-style: none;
+  background-color: #bbd9d9;
+}
+
+.questionCard1 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 16px;
+  position: relative;
+  background-color: #bbd9d9;
+  border: black solid;
+  border-radius: 4px;
+  margin: 60px 40px;
+  padding: 20px 0;
+  font-size: 1.5rem;
+}
+
+.questionCard2 {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
