--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  margin: 0;
+  margin: 0px;
   padding: 0;
 }
 
@@ -20,9 +20,8 @@ h1 {
   color: white;
 }
 
-.containerQuestionCards li {
-  list-style: none;
-  background-color: #bbd9d9;
+.containerQuestionCards {
+  padding: 0 16px;
 }
 
 .questionCard1 {
@@ -34,7 +33,7 @@ h1 {
   background-color: #bbd9d9;
   border: black solid;
   border-radius: 4px;
-  margin: 60px 40px;
+  margin: 40px 20px;
   padding: 20px 10px;
   font-size: 1.5rem;
 }
@@ -48,7 +47,7 @@ h1 {
   background-color: #bbd9d9;
   border: black solid;
   border-radius: 4px;
-  margin: 60px 40px;
+  margin: 40px 20px;
   padding: 20px 10px;
   font-size: 1.5rem;
 }
