--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,12 @@
   background-color: #ddecec;
 }
 
+main {
+  padding-bottom: 80px;
+}
+
 body {
-  margin: 0px;
+  margin: 0;
   padding: 0;
 }
 
@@ -77,6 +81,15 @@ button:hover {
   padding: 4px;
   border-radius: 4px;
   font-size: 1.1rem;
+}
+
+.bookmarkButton {
+  width: fit-content;
+  padding: 12px;
+  border: #000000 solid;
+  border-radius: 4px;
+  background-color: #109090;
+  font-size: 1.2rem;
 }
 
 .bookmarkIcon {
