create css files and link them to styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,11 @@
-* {
+@import "./components/button.css";
+@import "./components/card.css";
+@import "./components/header.css";
+@import "./components/navigation.css";
+
+*,
+::before,
+::after {
   box-sizing: border-box;
   background-color: #ddecec;
 }
