--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 * {
   box-sizing: border-box;
-  background-color: #ddecec;
+  background-color: var(--background-color);
 }
 
 body {
@@ -40,17 +40,17 @@ main.dark h2 {
 main {
   flex: 1;
   padding-bottom: 80px;
-  background-color: #ddecec;
+  background-color: var(--background-color);
 }
 
 .header {
   text-align: center;
-  background-color: #109090;
+  background-color: var(--secondary-color);
   padding: 24px;
 }
 
 h1 {
-  background-color: #109090;
+  background-color: var(--secondary-color);
   font-size: 2rem;
   color: white;
 }
@@ -65,7 +65,7 @@ h1 {
   flex-wrap: wrap;
   gap: 16px;
   position: relative;
-  background-color: #bbd9d9;
+  background-color: var(--primary-color);
   border: black solid;
   border-radius: 4px;
   margin: 40px 20px;
@@ -76,22 +76,22 @@ h1 {
 h2 {
   font-size: 1.5rem;
   font-weight: lighter;
-  background-color: #bbd9d9;
+  background-color: var(--primary-color);
   text-align: center;
 }
 
-.answerButton {
+button {
   align-self: center;
   width: fit-content;
   padding: 12px;
   border: #000000 solid;
   border-radius: 4px;
-  background-color: #109090;
+  background-color: var(--secondary-color);
   font-size: 1.2rem;
 }
 
 button:hover {
-  background-color: #1a5e5e;
+  background-color: var(--accent-color);
   color: white;
   transition: 0.5s;
 }
@@ -100,7 +100,7 @@ button:hover {
   display: flex;
   gap: 8px;
   padding: 16px;
-  background-color: #bbd9d9;
+  background-color: var(--primary-color);
 }
 
 .categoryTags li {
@@ -128,14 +128,18 @@ button:hover {
   right: 20px;
   height: 35px;
   width: 35px;
-  background: linear-gradient(to bottom, #ddecec, #bbd9d9);
+  background: linear-gradient(
+    to bottom,
+    var(--background-color),
+    var(--primary-color)
+  );
 }
 
 nav {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #109090;
+  background-color: var(--secondary-color);
 }
 
 .breadcrumbs {
@@ -143,31 +147,31 @@ nav {
   justify-content: space-evenly;
   align-items: center;
   list-style: none;
-  background-color: #109090;
+  background-color: var(--secondary-color);
   padding: 0;
   margin: 0;
 }
 
 i {
   color: white;
-  background-color: #109090;
+  background-color: var(--secondary-color);
   font-size: 60px;
   padding: 15px;
 }
 
 i:active {
-  background-color: #1a5e5e;
+  background-color: var(--accent-color);
 }
 
 .iconLink {
-  background-color: #109090;
-  color: #109090;
+  background-color: var(--secondary-color);
+  color: var(--secondary-color);
   text-align: center;
 }
 
 .activeIconLink i {
-  color: #194746;
-  background-color: #bbd9d9;
+  color: var(--accent-color);
+  background-color: var(--primary-color);
 }
 
 /* Profilepage */
@@ -188,7 +192,7 @@ i:active {
 }
 
 .profile__stage h2 {
-  background-color: #ddecec;
+  background-color: var(--background-color);
   font-weight: bold;
 }
 
@@ -222,7 +226,7 @@ p {
   /* Optional: Weitere Stile für die Buttons */
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #109090;
+  background-color: var(--secondary-color);
 }
 
 .outputTextLikes {
