--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ h1 {
   padding: 0 16px;
 }
 
-.questionCard {
+.questionCardList {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
