set default to light mode when opening the page

--- a/global.css
+++ b/global.css
@@ -3,4 +3,6 @@
   --secondary-color: #109090;
   --accent-color: #1a5e5e;
   --background-color: #ddecec;
+  --dark-color: black;
+  --dark-accent-color: white;
 }
