--- a/components/button.css
+++ b/components/button.css
@@ -1,3 +1,4 @@
+/* darkmode toggle button */
 input[type="checkbox"] + span {
   width: 100px;
   height: 70px;
@@ -9,7 +10,7 @@ input[type="checkbox"] + span:before {
   display: inline-block;
   width: 100%;
   height: 100%;
-  background: url("/assets/toggle-off.svg") no-repeat 0 0;
+  background: url("/assets/toggle-on.svg") no-repeat 0 0;
   background-size: 100% 100%;
 }
 
@@ -18,7 +19,7 @@ input[type="checkbox"]:checked + span:before {
   display: inline-block;
   width: 100%;
   height: 100%;
-  background: url("/assets/toggle-on.svg") no-repeat 0 0;
+  background: url("/assets/toggle-off.svg") no-repeat 0 0;
   background-size: 100% 100%;
 }
 
