adding styling to characters and fieldborders

--- a/components/form.css
+++ b/components/form.css
@@ -22,3 +22,13 @@ textarea {
 input {
   height: 50px;
 }
+
+.characters {
+  color: grey;
+  font-size: 1rem;
+  text-align: right;
+}
+
+.tagLabel {
+  border: grey solid 1px;
+}
