--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 @import "./global.css";
 @import "./components/button.css";
 @import "./components/card.css";
-@import "./components/header.css";
 @import "./components/navigation.css";
 @import "./components/form.css";
 
@@ -47,7 +46,7 @@ main {
   background-color: var(--background-color);
 }
 
-.header {
+.page__header {
   text-align: center;
   background-color: var(--secondary-color);
   padding: 24px;
@@ -63,7 +62,7 @@ h1 {
   padding: 0 16px;
 }
 
-.questionCardList {
+.questionCardListItem {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -137,45 +136,6 @@ button:hover {
     var(--background-color),
     var(--primary-color)
   );
-}
-
-nav {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background-color: var(--secondary-color);
-}
-
-.breadcrumbs {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  list-style: none;
-  background-color: var(--secondary-color);
-  padding: 0;
-  margin: 0;
-}
-
-i {
-  color: white;
-  background-color: var(--secondary-color);
-  font-size: 60px;
-  padding: 15px;
-}
-
-i:active {
-  background-color: var(--accent-color);
-}
-
-.iconLink {
-  background-color: var(--secondary-color);
-  color: var(--secondary-color);
-  text-align: center;
-}
-
-.activeIconLink i {
-  color: var(--accent-color);
-  background-color: var(--primary-color);
 }
 
 /* Profilepage */
